plugins {
    id 'java'
    id 'maven'
    id 'maven-publish'
    id 'checkstyle'
}

repositories {
    mavenCentral()
    mavenLocal()
}

apply from: '../opencadc.gradle'

sourceCompatibility = 1.8

group = 'org.opencadc'

version = '2.0'

description = 'OpenCADC VOSpace test library'
def git_url = 'https://github.com/opencadc/vos'

dependencies {
    compile 'org.jdom:jdom2:[2.0.6,3.0)'
    compile 'xerces:xercesImpl:[2.12,)'
    compile 'org.json:json:20160212'

    compile 'org.opencadc:cadc-util:[1.6,2.0)'
    compile 'org.opencadc:cadc-vos:[2.0,)'
    compile 'org.opencadc:cadc-uws:[1.0,2.0)'
    compile 'org.opencadc:cadc-registry:[1.5.15,2.0)'

    compile 'junit:junit:[4.0,)'
    compile 'org.httpunit:httpunit:[1.7,)'
}
